SC-1967 Refactor code to use the new lookup table