@@ -45,7 +45,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20</version>
 				<configuration>
-					<!-- <skipTests>true</skipTests> -->
+					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<includes>
 						<include>**/*Spec.java</include>
 						<include>**/*Test.java</include>
